// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seo noPost 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    Laura Ohrndorf | Portfolio and Website
     • Blog
  </title>
  <meta
    content="portfolio"
    name="description"
  />
  <script
    type="application/ld+json"
  >
    [{"@context":"http://schema.org","@type":"WebSite"}]
  </script>
  <meta
    content="Laura Ohrndorf | Portfolio and Website"
    property="og:site_name"
  />
  <meta
    content="Laura Ohrndorf | Portfolio and Website"
    name="twitter:title"
    property="og:title"
  />
  <meta
    content="https://www.laura.fyi"
    property="og:url"
  />
  <meta
    content="portfolio"
    name="twitter:description"
    property="og:description"
  />
</HelmetWrapper>
`;

exports[`seo post 1`] = `
<HelmetWrapper
  defer={true}
  encodeSpecialCharacters={true}
>
  <title>
    title
     • Blog
  </title>
  <meta
    content="description"
    name="description"
  />
  <script
    type="application/ld+json"
  >
    [{"@context":"http://schema.org","@type":"WebSite"}]
  </script>
  <meta
    content="title"
    property="og:site_name"
  />
  <meta
    content="article"
    property="og:type"
  />
  <meta
    content="title"
    name="twitter:title"
    property="og:title"
  />
  <meta
    content="https://www.laura.fyi"
    property="og:url"
  />
  <meta
    content="description"
    name="twitter:description"
    property="og:description"
  />
</HelmetWrapper>
`;
